Implemented interdependent spinners for location.

--- a/Users/eransyd/AndroidStudioProjects/GymBuddy/app/src/main/res/values/strings.xml
+++ b/Users/eransyd/AndroidStudioProjects/GymBuddy/app/src/main/res/values/strings.xml
@@ -21,6 +21,9 @@
         <item>University Gym</item>
     </string-array>
     <string name="GymLocation">Home Gym Location</string>
+    <string-array name ="default_location">
+        <item>Please choose a gym</item>
+    </string-array>
     <string-array name="goodlife_location">
         <item>-----</item>
         <item>Victoria Park Terrace</item>
