Firebase database is set up and now stores account information.

--- a/Users/eransyd/AndroidStudioProjects/GymBuddy/app/src/main/res/values/strings.xml
+++ b/Users/eransyd/AndroidStudioProjects/GymBuddy/app/src/main/res/values/strings.xml
@@ -47,6 +47,7 @@
     <string name="dob">Date of Birth</string>
     <string name="dobPicker">DD/MM/YYYY</string>
     <string name="phone">Phone Number</string>
+    <string name = "Username">User Name</string>
 
 
 
